add: hw #1; delete: lessons

--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Advent%20Pro:wght@400;500;700&display=swap" rel="stylesheet">
+	<title>TypeScript</title>
+	<style>
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+
+		body {
+			font-family: 'Advent Pro';
+			font-size: max(1rem, 1.5vw);
+			background-color: #fff;
+			padding: 2.5rem 0.9375rem;
+			background: #EEAECA;
+			background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(194, 180, 217, 1) 49%, rgba(170, 184, 225, 1) 75%, rgba(148, 187, 233, 1) 99%);
+		}
+
+		a {
+			text-decoration: none;
+			color: #500928;
+			transition: color 0.3s ease;
+
+			&:hover {
+				color: #094250;
+			}
+		}
+
+		h1 {
+			text-align: center;
+			font-size: max(1.25rem, 2vw);
+
+			&:not(:last-child) {
+				margin-block-end: max(1.25rem, 2vw);
+			}
+		}
+
+		ol {
+			padding-inline-start: 1.875rem;
+		}
+	</style>
 </head>
+
 <body>
-	
+	<h1>Домашні роботи</h1>
+	<ol>
+		<li><a href="homework_01/index.html">Домашня робота №1</a></li>
+	</ol>
 </body>
+
 </html>
