--- a/homeworks/homework_01/index.html
+++ b/homeworks/homework_01/index.html
@@ -10,7 +10,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/javascript.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/typescript.min.js"></script>
-	<script src="./javascript/script.js" async></script>
+	<script src="./javascript/script.js" defer></script>
 	<!-- <script src="./javascript/test.js" async></script> -->
 	<link rel="stylesheet" href="css/style.css">
 	<title>Домашня робота №1</title>
