--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -53,6 +53,7 @@
 	<h1>Домашні роботи</h1>
 	<ol>
 		<li><a href="homework_01/index.html">Домашня робота №1</a></li>
+		<li><a href="homework_02/index.html">Домашня робота №2</a></li>
 	</ol>
 </body>
 
